Fix fireworks z-index

--- a/src/components/molecules/UserProfilePicture/fireworks.scss
+++ b/src/components/molecules/UserProfilePicture/fireworks.scss
@@ -71,6 +71,9 @@ $box-shadow2: ();
   -ms-transform: $settings;
 }
 
+.pyro {
+  z-index: 2;
+}
 .pyro > .before,
 .pyro > .after {
   position: absolute;
